2012-05-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y:
	[ 3527620 ] EnumerateClasses does not include qualifiers by default

2012-05-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	[ 3529856 ] httpProcs limit can be broken

2012-05-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.h, indCIMXMLHandler.c, interopServerProvider.c,
	test/TestProviders/tests/limitTest.sh:
	[ 3513390 ] Enforce LD and subscription limits
	Active Subscription limit, move LD check to interop

2012-05-21  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* indCIMXMLExport.c, indCIMXMLHander.c:
	[ 3527920 ] RI and http response codes

2012-05-18  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	[ 3528096 ] Error status codes sometimes not propigated for instances
	(patch by Tyrel Datwyler)

	* instance.c, test/TestProviders/cmpiTestMiscProvider.c,
	test/TestProviders/test/TestMisc8.lines:
	[ 3528074 ] Improve CMPIInstance Error Codes
	(patch by Tyrel Datwyler)

2012-05-18  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* indCIMXMLHander.c:
	[ 3524819 ] sfcb may hang on ac call to indication subscription

2012-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c,
	test/xmltest/enumerateInstance_CIM_IndicationService-propertyFilter.*:
	[ 3527693 ] Property filters don't work for enum upcalls
	(patch by Tyrel Datwyler)

2012-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.h, indCIMXMLHandler.c, interopServerProvider.c:
	[ 3513390 ] Enforce LD and subscription limits
	Use hashtable instead of EI

2012-05-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c, indCIMXMLHandler.c, internalProvider.c,
	queryOperation.h, queryStatement.c, result.c,
	test/xmltest/InstanceTest25GetWithPropertyFilter.xml:
	[ 3525651 ] CMSetPropertyFilter not CMPI 2.0 compliant
	(based on patch by Tyrel Datwyler)

2012-04-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
